--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/book_store?serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=Lhdv23Z7Na61
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
