Made application stateless, added User model with its DTO and Mapper, Role model, AuthenticationController, JWT Support, authentication based on login, password and users roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=Lhdv23Z7Na61
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+jwt.secret=dlwdkdjwhlegjdjcfwdcjhdsjdgjgewdcdw
+jwt.expiration=600000
+
+
