Fix errors that the mentor suggested: added script that insert roles to DB, script that added user with role: ADMIN

--- a/src/main/resources/db/changelog/changes/04-create-users-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/04-create-users-roles-table.yaml
@@ -11,9 +11,15 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     nullable: false
+                    foreignKeyName: user
+                    referencedColumnNames: id
+                    referencedTableName: users
 
               - column:
                   name: role_id
                   type: bigint
                   constraints:
                     nullable: false
+                    foreignKeyName: role
+                    referencedColumnNames: id
+                    referencedTableName: roles
