--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,6 +4,10 @@ databaseChangeLog:
   - include:
       file: db/changelog/changes/02-create-roles-table.yaml
   - include:
-      file: db/changelog/changes/03-create-users-roles-table.yaml
+      file: db/changelog/changes/03-create-users-table.yaml
   - include:
-      file: db/changelog/changes/04-create-users-table.yaml
+      file: db/changelog/changes/04-create-users-roles-table.yaml
+  - include:
+      file: db/changelog/changes/05-add-roles-user-admin.yaml
+  - include:
+      file: db/changelog/changes/06-add-user-admin.yaml
