--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
 jwt.secret=dlwdkdjwhlegjdjcfwdcjhdsjdgjgewdcdw
 jwt.expiration=600000
 
