--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -19,3 +19,5 @@ databaseChangeLog:
       file: db/changelog/changes/09-create-shopping-carts-table.yaml
   - include:
       file: db/changelog/changes/10-create-cart-items-table.yaml
+  - include:
+      file: db/changelog/changes/11-delete-user-id-column-shopping-cart-table.yaml
