--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,7 @@ databaseChangeLog:
       file: db/changelog/changes/10-create-cart-items-table.yaml
   - include:
       file: db/changelog/changes/11-delete-user-id-column-shopping-cart-table.yaml
+  - include:
+      file: db/changelog/changes/12-create-orders-table.yaml
+  - include:
+      file: db/changelog/changes/13-create-order-items-table.yaml
